// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemMap should render a apple icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="Apple"
  >
    <span>
      <AppleIcon
        href="https://apple.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a docs icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="Docs"
  >
    <span>
      <DocumentScannerIcon
        href="https://docs.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a github icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="Github"
  >
    <span>
      <GithubIcon
        href="https://github.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a google icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="Google"
  >
    <span>
      <GoogleIcon
        href="https://google.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a link icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="Link"
  >
    <span>
      <LinkIcon
        href="https://google.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a linkedin icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="LinkedIn"
  >
    <span>
      <LinkedinIcon
        href="https://linkedin.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;

exports[`itemMap should render a youtube icon 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Tooltip)
    title="YouTube"
  >
    <span>
      <YoutubeIcon
        href="https://youtube.com"
      />
    </span>
  </ForwardRef(Tooltip)>
</ForwardRef(Box)>
`;
